--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
             </ul>
         </section>
     </div>
-
+<script
+type="text/javascript" 
+    
+    src="https://npmcdn.com/parse/dist/parse.min.js"
+        ></script>
+    <script type="text/javascript"
+        src=sscript.js></script>
     <script src="script.js"></script>
-</body>
-</html>
